resources/css/components/_section-intro.scss
.section-intro--center {
  justify-items: center;
  text-align: center;
}

.section-intro--inline {
  display: grid;
  gap: var(--grid-gap);

  @media (width >= 560px) {
    align-items: baseline;
    grid-template-columns: 1fr auto;
  }
}

.section-intro__eyebrow {
    font-size: var(--text-lg);
    text-transform: uppercase;
    font-family: var(--font-family-secondary);
    font-weight: var(--font-weight-bold);
    letter-spacing: 10%;
    color: var(--theme-text-muted);
    margin-block-end: var(--space-sm);
}

.section-intro__title {
  color: var(--theme-text-accent);
  font-family: var(--font-family-primary);
  font-weight: var(--font-weight-bold);
  line-height: var(--line-height-xs);
  max-width: 56ch;
  text-wrap: balance;
  letter-spacing: -3%;
}

.section-intro__title--h1 {
  font-size: var(--display-xl);
}

.section-intro__title--h2 {
  font-size: var(--display-lg);
}

.section-intro__title--cta {
  font-size: var(--display-2xl);
  max-width: 20ch;
}

.section-intro__description {
  margin-block-start: var(--space-md);
  color: var(--theme-text-muted);
  max-width: 56ch;

  &.section-intro__description--large {
    font-size: var(--text-lg);
  }
}

.section-intro__link {
  display: inline-flex;
  align-items: center;
  gap: var(--space-2xs);
  color: var(--theme-link);
  font-size: var(--text-md);
  font-weight: var(--font-weight-bold);
  line-height: var(--line-height-sm);
  text-decoration: none;
}

.section-intro__link:hover {
  color: var(--theme-link-hover);
}

.section-intro__link iconify-icon {
  font-size: 1rem;
}

.section-intro .button-group {
  margin-block-start: var(--space-lg);
}

